--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "firebase": "^5.4.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.4.2",
