--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "firebase": "^5.4.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.0",
-    "react-router-bootstrap": "^0.24.4",
     "react-dom": "^16.4.2",
+    "react-firebase-file-uploader": "^2.4.2",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
